Fix task view overflow in css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,6 @@ h1 {
 }
 
 #tasks ul {
-	width: 90%;
 	margin: auto;
 	margin-top: 10px;
 	padding: 20px;
